--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -177,6 +177,7 @@ opacity-rule = [
   "100:class_g    = 'Brave-browser'",
   "100:class_g    = 'Alacritty'",
   "100:class_g    = 'kitty'",
+  "100:class_g    = 'Firefox'",
 ];
 
 
