--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,8 +17,8 @@
 ;==========================================================
 
 [colors]
-; background = #1E1E3F
-background = #240935
+; background = #240935
+background = #1E1E3F
 background-alt = #373B41
 foreground = #a3a3a3
 primary = #F0C674
@@ -37,9 +37,11 @@ alert = #A54242
 disabled = #D8DEE9 
 
 [bar/example]
-width = 100%
-height = 30pt
-radius = 6
+width = 80%
+offset-x = 10%
+offset-y = 1%
+height = 28pt
+radius = 20
 monitor = ${env:MONITOR:}
 
 background = ${colors.background}
@@ -50,28 +52,25 @@ border-color = #00000000
 padding-left = 2
 padding-right = 2
 module-margin = 1
-separator = |
-separator-foreground = ${colors.disabled}
+separator = 
+separator-foreground = ${colors.red}
 font-0 = Hack Nerd Font;3
 
 modules-left = logo bspwm
-modules-right = filesystem memory cpu pulseaudio battery date
+modules-right = battery filesystem memory cpu pulseaudio
+modules-center = date backlight 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; tray-position = right
-
 wm-restack = bspwm
-
-; override-redirect = true
 
 [module/bspwm]
 type = internal/bspwm
 format = <label-state>
-format-padding = 1
+format-padding = 0
 index-sort = true
 
 enable-click = true
@@ -86,18 +85,21 @@ label-occupied = 
 label-occupied-foreground = ${colors.yellow}
 label-occupied-padding = 1
 
-
-label-empty =  
+label-empty = 
 label-empty-padding = 1
 
 [module/logo]
 type = custom/text
-content = 
+content = " "
 content-foreground = ${colors.logo}
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
+label = %title%
+label-foreground = #00FFFF
+label-padding = 1
+label-maxlen = 40
+
 
 [module/filesystem]
 type = internal/fs
@@ -118,8 +120,8 @@ format-volume = <label-volume>
 
 label-volume = %percentage%%
 
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
+label-muted = 婢 muted 
+label-muted-foreground = ${colors.red}
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -140,12 +142,13 @@ format-prefix = " "
 format-prefix-foreground = ${colors.lightblue}
 label = %percentage_used:2%%
 
+
 [module/cpu]
 type = internal/cpu
 interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.lightblue}
-label = %percentage:2%%
+label = %percentage:0%%
 
 [network-base]
 type = internal/network
@@ -168,102 +171,33 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 type = internal/date
 interval = 1
 
-date = %{F#61AFEF}%{F-} %H:%M:%S
-date-alt = %Y-%m-%d %H:%M:%S
+; date = %{F#61AFEF}%{F-} %H:%M:%S original
+date = %{F#b816e0}%{F-} %H:%M:%S
+date-alt = %{F#b816e0}%{F-} %Y-%m-%d %H:%M:%S
 
 label = %date%
-label-foreground = ${colors.icons}
+label-underline = ${colors.green}
 
 [module/battery]
 type = internal/battery
 
-; This is useful in case the battery never reports 100% charge
-; Default: 100
 full-at = 99
-
-; format-low once this charge percentage is reached
-; Default: 10
-; New in version 3.6.0
 low-at = 5
 
-; Use the following command to list batteries and adapters:
-; $ ls -1 /sys/class/power_supply/
 battery = BAT0
 adapter = ADP1
 
-; If an inotify event haven't been reported in this many
-; seconds, manually poll for new values.
-;
-; Needed as a fallback for systems that don't report events
-; on sysfs/procfs.
-;
-; Disable polling by setting the interval to 0.
-;
-; Default: 5
 poll-interval = 5
 
-; see "man date" for details on how to format the time string
-; NOTE: if you want to use syntax tags here you need to use %%{...}
-; Default: %H:%M:%S
 time-format = %H:%M
 
-; Available tags:
-;   <label-charging> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
-;   <animation-charging>
-format-charging = %{F#E5C07B}<animation-charging>%{F-}  <label-charging>
+format-charging = %{F#E5C07B}<animation-charging>  <label-charging>%{F-}
+format-discharging = %{F#04afc9}<ramp-capacity>%{F-}  <label-discharging>
 
-; Available tags:
-;   <label-discharging> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
-;   <animation-discharging>
-format-discharging = <ramp-capacity>  <label-discharging>
-
-; Available tags:
-;   <label-full> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
-;format-full = <ramp-capacity> <label-full>
-
-; Format used when battery level drops to low-at
-; If not defined, format-discharging is used instead.
-; Available tags:
-;   <label-low>
-;   <animation-low>
-;   <bar-capacity>
-;   <ramp-capacity>
-; New in version 3.6.0
-;format-low = <label-low> <animation-low>
-
-; Available tokens:
-;   %percentage% (default) - is set to 100 if full-at is reached
-;   %percentage_raw%
-;   %time%
-;   %consumption% (shows current charge rate in watts)
 label-charging = %percentage%%
-
-
-; Available tokens:
-;   %percentage% (default) - is set to 100 if full-at is reached
-;   %percentage_raw%
-;   %time%
-;   %consumption% (shows current discharge rate in watts)
 label-discharging = %percentage%%
-
-; Available tokens:
-;   %percentage% (default) - is set to 100 if full-at is reached
-;   %percentage_raw%
 label-full = %{F#0fdb12} %{F-} 
-
-; Available tokens:
-;   %percentage% (default) - is set to 100 if full-at is reached
-;   %percentage_raw%
-;   %time%
-;   %consumption% (shows current discharge rate in watts)
-; New in version 3.6.0
-label-low = BATTERY LOW
+label-low = %{F#e01916}ramp-capacity-0!%{F-}
 
 ; Only applies if <ramp-capacity> is used
 ramp-capacity-0 =  
@@ -302,5 +236,3 @@ animation-low-framerate = 200
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
-
-; vim:ft=dosini
