CHANGE: new format for date

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -173,7 +173,7 @@ interval = 1
 
 ; date = %{F#61AFEF}%{F-} %H:%M:%S original
 date = %{F#b816e0}%{F-} %H:%M:%S
-date-alt = %{F#b816e0}%{F-} %Y-%m-%d %H:%M:%S
+date-alt = %{F#b816e0}%{F-} %A %d-%m-%Y %H:%M:%S
 
 label = %date%
 label-underline = ${colors.green}
