ADD: wezterm and fixed problems

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -140,7 +140,8 @@ type = internal/memory
 interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.lightblue}
-label = %percentage_used:2%%
+;label = %percentage_used:2%%
+label = %gb_used%
 
 
 [module/cpu]
@@ -149,6 +150,7 @@ interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.lightblue}
 label = %percentage:0%%
+
 
 [network-base]
 type = internal/network
