--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -176,6 +176,7 @@ opacity-rule = [
   "100:class_g    = 'Rofi'",
   "100:class_g    = 'Brave-browser'",
   "100:class_g    = 'Alacritty'",
+  "100:class_g    = 'org.wezfurlong.wezterm'",
   "100:class_g    = 'kitty'",
   "100:class_g    = 'Firefox'",
 ];
