--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -9,7 +9,7 @@ rounded-corners-exclude = [
   "class_g = 'code-oss'",
   "class_g = 'Thunderbird'"
 ];
-round-borders = 0.0;
+round-borders = 1.0;
 #round-borders-exclude = [
   #"class_g = 'TelegramDesktop'",
 #];
@@ -131,7 +131,7 @@ fade-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.8;
+inactive-opacity = 0.6;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -142,7 +142,7 @@ frame-opacity = 0.7;
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.96;
+active-opacity = 0.95;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
@@ -191,7 +191,7 @@ opacity-rule = [
 # blur-method =
 # blur-size = 12
 #
-# blur-deviation = false
+# blur-deviation = true
 #
 # blur-strength = 5
 
@@ -221,18 +221,18 @@ opacity-rule = [
 #blur-kern = "3x3box";
 
 
-#blur: {
+blur: {
 #  # requires: https://github.com/ibhagwan/picom
-#  method = "kawase";
-#  #method = "kernel";
-#  strength = 7;
-#  # deviation = 1.0;
-#  # kernel = "11x11gaussian";
+  method = "kawase";
+  kern = "3x3box";
+# method = "kernel";
+#  strength = 3;
+#  deviation = 2;
+#  kernel = "11x11gaussian";
 #  background = false;
 #  background-frame = false;
 #  background-fixed = false;
-#  kern = "3x3box";
-#}
+}
 
 # Exclude conditions for background blur.
 #blur-background-exclude = [
@@ -258,8 +258,8 @@ opacity-rule = [
 # `xrender` is the default one.
 #
 experimental-backends = true;
-#backend = "glx";
-backend = "xrender";
+backend = "glx";
+# backend = "xrender";
 
 
 # Enable/disable VSync.
