--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -58,7 +58,7 @@ font-0 = Hack Nerd Font;3
 
 modules-left = logo bspwm
 modules-right = battery filesystem memory cpu pulseaudio
-modules-center = date backlight 
+modules-center = date bspwn backlight 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
