add: /home to see percentage used

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -106,6 +106,7 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
+mount-1 = /home
 
 label-mounted = %{F#61AFEF}%{F-} %percentage_used%%
 label-unmounted = %mountpoint% not mounted
