--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -179,6 +179,7 @@ opacity-rule = [
   "100:class_g    = 'org.wezfurlong.wezterm'",
   "100:class_g    = 'kitty'",
   "100:class_g    = 'Firefox'",
+  "100:class_g    = 'Stremio'",
 ];
 
 
