--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -57,7 +57,7 @@ separator-foreground = ${colors.red}
 font-0 = Hack Nerd Font;3
 
 modules-left = logo bspwm
-modules-right = battery filesystem memory cpu pulseaudio
+modules-right = battery fs-root fs-home memory cpu pulseaudio
 modules-center = date bspwn backlight 
 
 cursor-click = pointer
@@ -100,15 +100,25 @@ label-foreground = #00FFFF
 label-padding = 1
 label-maxlen = 40
 
-
-[module/filesystem]
+[fs-base]
 type = internal/fs
 interval = 25
+fixed-values = true
+label-mounted = %mountpoint%: %free%
 
+[module/fs-root]
+inherit = fs-base
 mount-0 = /
-mount-1 = /home
 
 label-mounted = %{F#61AFEF}%{F-} %percentage_used%%
+label-unmounted = %mountpoint% not mounted
+label-unmounted-foreground = ${colors.disabled}
+
+[module/fs-home]
+inherit = fs-base
+mount-0 = /home
+
+label-mounted = %{F#61AFEF}%{F-} %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
 
