--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -7,12 +7,13 @@ rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
-  "class_g = 'Thunderbird'"
+  "class_g = 'Thunderbird'",
+  "class_g = 'Dunst'"
 ];
 round-borders = 1.0;
-#round-borders-exclude = [
-  #"class_g = 'TelegramDesktop'",
-#];
+round-borders-exclude = [
+  "class_g = 'Dunst'",
+];
 
 # Specify a list of border width rules, in the format `PIXELS:PATTERN`, 
 # Note we don't make any guarantee about possible conflicts with the
@@ -180,6 +181,8 @@ opacity-rule = [
   "100:class_g    = 'kitty'",
   "100:class_g    = 'Firefox'",
   "100:class_g    = 'Stremio'",
+  "100:class_g    = 'DBeaver'",
+  "100:class_g    = 'obs'",
 ];
 
 
