refactor: updated blur method due to changes in picom

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -227,7 +227,7 @@ opacity-rule = [
 
 blur: {
 #  # requires: https://github.com/ibhagwan/picom
-  method = "kawase";
+  method = "dual_kawase";
   kern = "3x3box";
 # method = "kernel";
 #  strength = 3;
