--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -16,9 +16,30 @@
 ;
 ;==========================================================
 
+; [colors] - blue theme
+
+; background = #1E1E3F
+; background = #161616
+; background = #160D3B
+; background-alt = #373B41
+; foreground = #a3a3a3
+; primary = #F0C674
+; secondary = #8ABEB7
+; red = #E06C75
+; yellow = #E5C07B
+; lightblue = #61AFEF
+; pink = #C678DD
+; turquesa = #56B6C2
+; grey = #ABB2BF
+; logo = #5E81AC
+; green = #0fdb12
+; logo = #56B6C2
+; icons = #8FBCBB
+; alert = #A54242
+; disabled = #D8DEE9 
+
 [colors]
-; background = #240935
-background = #1E1E3F
+background = #0E0629
 background-alt = #373B41
 foreground = #a3a3a3
 primary = #F0C674
@@ -37,8 +58,8 @@ alert = #A54242
 disabled = #D8DEE9 
 
 [bar/example]
-width = 80%
-offset-x = 10%
+width = 90%
+offset-x = 5%
 offset-y = 1%
 height = 28pt
 radius = 10
@@ -47,8 +68,8 @@ monitor = ${env:MONITOR:}
 background = ${colors.background}
 foreground = ${colors.foreground}
 line-size = 3pt
-border-size = 1pt
-border-color = #00000000
+border-size = 0pt
+;border-color = #00000000
 padding-left = 2
 padding-right = 2
 module-margin = 1
@@ -57,7 +78,7 @@ separator-foreground = ${colors.red}
 font-0 = Hack Nerd Font;3
 
 modules-left = logo bspwm
-modules-right = battery fs-root fs-home memory cpu pulseaudio
+modules-right = battery fs-root fs-home memory cpu temperature pulseaudio network-status
 modules-center = date bspwn backlight 
 
 cursor-click = pointer
@@ -245,6 +266,25 @@ animation-discharging-framerate = 500
 animation-low-0 = !
 animation-low-1 = 
 animation-low-framerate = 200
+
+[module/network-status]
+type = custom/script
+interval = 5
+exec = ~/.config/polybar/scripts/network_status.sh
+#format-prefix = " "
+#format-prefix-foreground = ${colors.lightblue}
+label = %output%
+
+[module/temperature]
+type = custom/script
+exec = ~/.config/polybar/scripts/avg_temp.sh
+interval = 5
+label = %output%
+
+; [module/dunst]
+; type = custom/script
+; exec = ~/.config/polybar/scripts/dunst_status.sh
+; interval = 5
 
 [settings]
 screenchange-reload = true
