--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,7 +2,7 @@
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton
-corner-radius = 15.0;
+corner-radius = 15;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'Polybar'",
@@ -10,7 +10,7 @@ rounded-corners-exclude = [
   "class_g = 'Thunderbird'",
   "class_g = 'Dunst'"
 ];
-round-borders = 1.0;
+round-borders = 10;
 round-borders-exclude = [
   "class_g = 'Dunst'",
 ];
@@ -39,30 +39,30 @@ shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 12;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -7;
+shadow-offset-x = -10;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -7;
+shadow-offset-y = -10;
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-red = 0
+# shadow-red = 0.5
 
 # Green color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-green = 0
+shadow-green = 1
 
 # Blue color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-blue = 0
+# shadow-blue = .1
 
 # Hex string color value of shadow (#000000 - #FFFFFF, defaults to #000000). This option will override options set shadow-(red/green/blue)
-# shadow-color = "#000000"
+# shadow-color = "#E06"
 
 # Specify a list of conditions of windows that should have no shadow.
 #
@@ -177,12 +177,18 @@ opacity-rule = [
   "100:class_g    = 'Rofi'",
   "100:class_g    = 'Brave-browser'",
   "100:class_g    = 'Alacritty'",
-  "100:class_g    = 'org.wezfurlong.wezterm'",
+  #"100:class_g    = 'org.wezfurlong.wezterm'",
   "100:class_g    = 'kitty'",
-  "100:class_g    = 'Firefox'",
+  "100:class_g    = 'firefox'",
   "100:class_g    = 'Stremio'",
   "100:class_g    = 'DBeaver'",
   "100:class_g    = 'obs'",
+  "100:class_g    = 'Postman'",
+  "100:class_g    = 'VSCodium'",
+  "100:class_g    = 'jetbrains-idea-ce'",
+  "100:class_g    = 'obsidian'",
+  "100:class_g    = 'Tibia'",
+
 ];
 
 
@@ -193,7 +199,7 @@ opacity-rule = [
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method =
-# blur-size = 12
+blur-size = 50
 #
 # blur-deviation = true
 #
@@ -203,7 +209,7 @@ opacity-rule = [
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
-# blur-background = true;
+#blur-background = true;
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
